--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="popular_header">TV YouTube</string>
     <string name="more_samples">More Samples</string>
+    <string name="refresh_links">Refresh Links</string>
     <string name="grid_view">Vertical Grid View</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
