improve first installation UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,12 +40,6 @@
 
     <string name="search_results">Search results for \'%1$s\'</string>
     <string name="no_search_results">No search results found for \'%1$s\'</string>
-    <!--<string name="catalog_url">https://storage.googleapis.com/android-tv/android_tv_videos_new.json</string>-->
-
-    <string name="catalog_url_default">
-        <!--https://drive.google.com/uc?export=download&amp;id=1rmE2Vm3F0bBWRWOWy-_HzAE-MAFd88F- -->
-        https://drive.google.com/uc?export=download&amp;id=1Cy_GhptCs1PA2nduwDLRK2S8tMszKqc8
-    </string>
 
     <string name="catalog_url_1">
         <!--https://gist.githubusercontent.com/chiou711/b03f0234f33db82bc9b3f9bacfee81de/raw/9eacbb889060c31741b45b5c21f47f2899d6e467/youtube_list_1.json-->
@@ -71,6 +65,14 @@
 
     <string name="catalog_url_5">
         https://drive.google.com/uc?export=download&amp;id=1XyPVZDU3jzLQ4_IvfjGrDhyZTA7ow6xp
+    </string>
+
+    <string name="catalog_url_6">
+        https://drive.google.com/uc?export=download&amp;id=1XhjEiByWTzWrzYs9ouAVKaJnZbS19Vr1
+    </string>
+
+    <string name="catalog_url_7">
+        https://drive.google.com/uc?export=download&amp;id=1Hm3-8lk6IuM7LESOrAhRoVGlLAHF1q7G
     </string>
 
     <!-- Error messages -->
