--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 
     <string name="popular_header">TV YouTube</string>
     <string name="more_samples">More Samples</string>
+    <string name="renew">Renew</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_links">Select Links</string>
     <string name="refresh_links2">Refresh Links2</string>
