--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,13 +20,13 @@
     <string name="browse_title"><![CDATA[TV YouTube]]></string>
     <string name="related_movies">Related Videos</string>
     <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
-    <string name="select_links_title"><![CDATA[Select Links]]></string>
+    <string name="select_category_title"><![CDATA[Select Category]]></string>
 
     <string name="popular_header">TV YouTube</string>
     <string name="more_samples">More Samples</string>
     <string name="renew">Renew</string>
     <string name="refresh_links">Refresh Links</string>
-    <string name="select_links">Select Links</string>
+    <string name="select_category">Select category</string>
     <string name="grid_view">Vertical Grid View</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
