--- a/doc/todo
+++ b/doc/todo
@@ -3,7 +3,7 @@
 	- category 2 to video 2 table
 	... and so on
 
-2. select links
+2. select category
 	- select category by selecting videoX table
 
 3. default category by selecting default videoX table
