--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -141,4 +141,6 @@
     <string name="database_update">更新资料库</string>
     <!--  delete  -->
     <string name="database_delete_item">删除当前项目</string>
+    <!--  connection error  -->
+    <string name="connection_error">网络连接错误</string>
 </resources>
