--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
     <string name="play_1">Play</string>
-    <string name="play_2">YouTube</string>
+    <string name="play_2">video</string>
     <string name="delete_1">Delete</string>
     <string name="delete_2">current item</string>
     <string name="buy_1">Buy and Own</string>
