--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -31,7 +31,7 @@
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
     <string name="play_1">播放</string>
-    <string name="play_2">YouTube</string>
+    <string name="play_2">video</string>
     <string name="delete_1">刪除</string>
     <string name="delete_2">當前項目</string>
     <string name="buy_1">Buy and Own</string>
