--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
     <string name="popular_header">TV YouTube</string>
-    <string name="more_samples">More Samples</string>
+    <string name="more_samples">More</string>
     <string name="renew">Renew</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">Select category</string>
