--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,12 +41,7 @@
     <string name="search_results">Search results for \'%1$s\'</string>
     <string name="no_search_results">No search results found for \'%1$s\'</string>
 
-    <string name="catalog_url_1">
-        https://drive.google.com/uc?export=download&amp;id=1rmE2Vm3F0bBWRWOWy-_HzAE-MAFd88F-
-    </string>
-
     <!-- Error messages -->
-
     <string name="videos_loading_error">Failed to load videos. Please check your network connection.</string>
     <string name="error_fragment_message">An error occurred</string>
     <string name="dismiss_error">Dismiss</string>
@@ -143,4 +138,9 @@
     <string name="database_delete_item">Delete current item</string>
     <!--  connection error  -->
     <string name="connection_error">Network connection error</string>
+
+    <!-- default URL link  -->
+    <string name="catalog_url_1">
+        https://drive.google.com/uc?export=download&amp;id=1UwzWtBTecYcUADR9F6OurJ7t91ZCJ-dm
+    </string>
 </resources>
