--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -140,5 +140,8 @@
     <string name="database_delete_item">删除当前项目</string>
     <!--  connection error  -->
     <string name="connection_error">网络连接错误</string>
+    <!-- title-->
+    <string name="current_category_title">现在使用</string>
+    <string name="current_list_title">列表</string>
 
 </resources>
