--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,5 +139,8 @@
     <string name="database_delete_item">Delete current item</string>
     <!--  connection error  -->
     <string name="connection_error">Network connection error</string>
+    <!-- title-->
+    <string name="current_category_title">Using now</string>
+    <string name="current_list_title">List</string>
 
 </resources>
