--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -24,13 +24,13 @@
     <string name="select_link_src_title"><![CDATA[Select Link Source]]></string>
 
     <string name="popular_header">TV YouTube</string>
-    <string name="more_samples">More</string>
+    <string name="options">選項</string>
     <string name="renew">Renew</string>
     <string name="refresh_links">Refresh Links</string>
-    <string name="select_category">Select category</string>
-    <string name="grid_view">Vertical Grid View</string>
+    <string name="select_category">選擇類別</string>
+    <string name="grid_view">垂直網格視圖</string>
     <string name="error_fragment">Error Fragment</string>
-    <string name="personal_settings">Personal Settings</string>
+    <string name="personal_settings">個人設置</string>
     <string name="play_1">播放</string>
     <string name="play_2">video</string>
     <string name="delete_1">刪除</string>
@@ -113,8 +113,8 @@
     <string name="onboarding_description_design">The Leanback sample shows how to quickly design apps designed for a 10-foot user interface</string>
     <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
     <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
-    <string name="pref_title_settings">App Settings</string>
-    <string name="pref_title_auto_play">Auto play</string>
+    <string name="pref_title_settings">應用設置</string>
+    <string name="pref_title_auto_play">自動播放</string>
     <string name="pref_key_auto_play">pref_auto_play</string>
     <string name="pref_title_recommendations">Recommendations</string>
     <string name="pref_key_recommendations">pref_recommendations</string>
