--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="select_link_src_title"><![CDATA[Select Link Source]]></string>
 
     <string name="popular_header">TV YouTube</string>
-    <string name="more_samples">More</string>
+    <string name="options">Options</string>
     <string name="renew">Renew</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">Select category</string>
