--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="select_category_title"><![CDATA[Select Category]]></string>
     <string name="select_link_src_title"><![CDATA[Select Link Source]]></string>
 
+    <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">Options</string>
     <string name="renew">Renew</string>
@@ -113,7 +114,7 @@
     <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
     <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
     <string name="pref_title_settings">App Settings</string>
-    <string name="pref_title_auto_play">Auto play</string>
+    <string name="pref_title_auto_play">Autoplay</string>
     <string name="pref_key_auto_play">pref_auto_play</string>
     <string name="pref_title_recommendations">Recommendations</string>
     <string name="pref_key_recommendations">pref_recommendations</string>
