--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -22,12 +22,12 @@
     <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
-    <string name="select_link_src_title">选择链接源</string>
+    <string name="add_category_title">添加链接源</string>
 
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">选项</string>
-    <string name="renew">Renew</string>
+    <string name="set_default">设置默认链接源</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">选择类别</string>
     <string name="grid_view">垂直网格视图</string>
