--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -22,12 +22,12 @@
     <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
-    <string name="select_link_src_title">選擇連結源</string>
+    <string name="add_category_title">增加連結源</string>
 
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">選項</string>
-    <string name="renew">Renew</string>
+    <string name="set_default">設置默認鏈接源</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">選擇類別</string>
     <string name="grid_view">垂直網格視圖</string>
