--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -27,7 +27,7 @@
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">选项</string>
-    <string name="set_default">设置默认链接源</string>
+    <string name="set_default">恢复默认链接源</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">选择类别</string>
     <string name="grid_view">垂直网格视图</string>
@@ -149,5 +149,9 @@
 
     <string name="local_link_src">本地链接源</string>
     <string name="default_link_src">默认链接源</string>
+
+    <!-- import  -->
+    <string name="import_finish">导入完成</string>
+    <string name="please_wait">请稍候</string>
 
 </resources>
