--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,7 +27,7 @@
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">選項</string>
-    <string name="set_default">設置默認鏈接源</string>
+    <string name="set_default">恢復預設鏈接源</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">選擇類別</string>
     <string name="grid_view">垂直網格視圖</string>
@@ -149,5 +149,9 @@
 
     <string name="local_link_src">本地連結源</string>
     <string name="default_link_src">預設連結源</string>
+
+    <!-- import  -->
+    <string name="import_finish">導入完成</string>
+    <string name="please_wait">請稍候</string>
 
 </resources>
