--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -23,6 +23,7 @@
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
     <string name="add_category_title">添加链接源</string>
+    <string name="category_grid_view_title">类别网格视图</string>
 
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
@@ -30,7 +31,6 @@
     <string name="set_default">恢复默认链接源</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">选择类别</string>
-    <string name="grid_view">垂直网格视图</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">个人设置</string>
     <string name="play_1">播放</string>
@@ -116,8 +116,12 @@
     <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
     <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
     <string name="pref_title_settings">应用设置</string>
-    <string name="pref_title_auto_play">自动播放</string>
-    <string name="pref_key_auto_play">pref_auto_play</string>
+    <string name="pref_title_show_duration">显示视频长短</string>
+    <string name="pref_title_auto_play_by_list">自动播放范围: 列表</string>
+    <string name="pref_title_auto_play_by_category">自动播放范围: 分类</string>
+    <string name="pref_key_show_duration">pref_show_duration</string>
+    <string name="pref_key_auto_play_by_list">pref_list_play</string>
+    <string name="pref_key_auto_play_by_category">pref_category_play</string>
     <string name="pref_title_recommendations">Recommendations</string>
     <string name="pref_key_recommendations">pref_recommendations</string>
     <string name="pref_key_screen_general">general_settings</string>
