--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
     <string name="add_category_title">Add Link Source</string>
+    <string name="category_grid_view_title">Category grid view</string>
 
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
@@ -30,7 +31,6 @@
     <string name="set_default">Recover default link source</string>
     <string name="refresh_links">Refresh Links</string>
     <string name="select_category">Select category</string>
-    <string name="grid_view">Vertical Grid View</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
     <string name="play_1">Play</string>
@@ -115,8 +115,12 @@
     <string name="onboarding_description_simple">You can include the Leanback library through gradle in your own apps</string>
     <string name="onboarding_description_project">Are you looking for guidance? This sample is available on GitHub so you can see how we built this.</string>
     <string name="pref_title_settings">App Settings</string>
-    <string name="pref_title_auto_play">Autoplay</string>
-    <string name="pref_key_auto_play">pref_auto_play</string>
+    <string name="pref_title_show_duration">Show video duration</string>
+    <string name="pref_title_auto_play_by_list">Auto play range: list</string>
+    <string name="pref_title_auto_play_by_category">Auto play range: category</string>
+    <string name="pref_key_show_duration">pref_show_duration</string>
+    <string name="pref_key_auto_play_by_list">pref_list_play</string>
+    <string name="pref_key_auto_play_by_category">pref_category_play</string>
     <string name="pref_title_recommendations">Recommendations</string>
     <string name="pref_key_recommendations">pref_recommendations</string>
     <string name="pref_key_screen_general">general_settings</string>
