--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -23,14 +23,14 @@
     <string name="select_category_title"><![CDATA[Select Category]]></string>
 
     <string name="add_category_title">增加連結源</string>
-    <string name="category_grid_view_title">類別網格視圖</string>
+    <string name="category_grid_view_title">瀏覽分類內容</string>
 
     <string name="dir_name">TV_YouTube</string>
     <string name="popular_header">TV YouTube</string>
     <string name="options">選項</string>
     <string name="set_default">恢復預設鏈接源</string>
     <string name="refresh_links">Refresh Links</string>
-    <string name="select_category">選擇類別</string>
+    <string name="select_category">選擇分類</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">個人設置</string>
     <string name="play_1">播放</string>
@@ -148,7 +148,7 @@
     <!--  connection error  -->
     <string name="connection_error">網路連線錯誤</string>
     <!-- title-->
-    <string name="current_category_title">現在使用</string>
+    <string name="current_category_title">現在使用分類</string>
     <string name="current_list_title">列表</string>
 
     <string name="local_link_src">本地連結源</string>
