--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,8 +162,11 @@
     <!-- gdrive  -->
     <string name="toast_no_json_found">JSON string is not found!</string>
     <string name="toast_import_gdrive_json">Import JSON content from Google Drive?</string>
+
+    <!-- confirmation   -->
     <string name="confirm_dialog_title">Confirmation</string>
-    <string name="edit_note_button_back">Cancel</string>
-    <string name="edit_note_button_save">OK</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_ok">OK</string>
+    <string name="delete_category_message">Do you want to delete this category?</string>
 
 </resources>
