--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -169,5 +169,6 @@
     <string name="button_cancel">取消</string>
     <string name="button_ok">确定</string>
     <string name="delete_category_message">要删除此分类吗？</string>
+    <string name="delete_playlist_message">要删除此播放列表吗？</string>
 
 </resources>
