--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,5 +168,6 @@
     <string name="button_cancel">Cancel</string>
     <string name="button_ok">OK</string>
     <string name="delete_category_message">Do you want to delete this category?</string>
+    <string name="delete_playlist_message">Do you want to delete this playlist?</string>
 
 </resources>
