--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -30,7 +30,7 @@
     <string name="options">选项</string>
     <string name="sel_file_mgr_app">选择文件管理器应用</string>
     <string name="set_default">恢复默认链接源</string>
-    <string name="refresh_links">Refresh Links</string>
+    <string name="remove_invalid_links">刪除在当前类别中的無效鏈接</string>
     <string name="select_category">选择分类</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">个人设置</string>
@@ -134,7 +134,8 @@
     <string name="pref_title_password">Password</string>
     <string name="pref_key_login">pref_login</string>
     <string name="pref_key_sel_file_mgr_app">pref_sel_file_mgr_app</string>
-    <string name="pref_key_set_default">pref_renew</string>
+    <string name="pref_key_set_default">pref_set_default</string>
+    <string name="pref_key_remove_invalid_links">pref_remove_invalid_links</string>
     <string name="pref_title_login">Login</string>
     <string name="playback_tag">PLAYBACK_TAG</string>
     <!-- dialog    -->
@@ -170,5 +171,6 @@
     <string name="button_ok">确定</string>
     <string name="delete_category_message">要删除此分类吗？</string>
     <string name="delete_playlist_message">要删除此播放列表吗？</string>
+    <string name="delete_item_message">要删除此项目吗？</string>
 
 </resources>
