--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -30,7 +30,7 @@
     <string name="options">選項</string>
     <string name="sel_file_mgr_app">選擇文件管理器應用</string>
     <string name="set_default">恢復預設鏈接源</string>
-    <string name="refresh_links">Refresh Links</string>
+    <string name="remove_invalid_links">刪除在當前類別中的無效鏈接</string>
     <string name="select_category">選擇分類</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">個人設置</string>
@@ -134,7 +134,8 @@
     <string name="pref_title_password">Password</string>
     <string name="pref_key_login">pref_login</string>
     <string name="pref_key_sel_file_mgr_app">pref_sel_file_mgr_app</string>
-    <string name="pref_key_set_default">pref_renew</string>
+    <string name="pref_key_set_default">pref_set_default</string>
+    <string name="pref_key_remove_invalid_links">pref_remove_invalid_links</string>
     <string name="pref_title_login">Login</string>
     <string name="playback_tag">PLAYBACK_TAG</string>
     <!-- dialog    -->
@@ -170,5 +171,6 @@
     <string name="button_ok">確定</string>
     <string name="delete_category_message">要刪除此分類嗎？</string>
     <string name="delete_playlist_message">要刪除此播放列表嗎？</string>
+    <string name="delete_item_message">要刪除此項目嗎？</string>
 
 </resources>
