--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="options">Options</string>
     <string name="sel_file_mgr_app">Select file manager App</string>
     <string name="set_default">Recover default link source</string>
-    <string name="refresh_links">Refresh Links</string>
+    <string name="remove_invalid_links">Remove invalid links in current category</string>
     <string name="select_category">Select category</string>
     <string name="error_fragment">Error Fragment</string>
     <string name="personal_settings">Personal Settings</string>
@@ -133,7 +133,8 @@
     <string name="pref_title_password">Password</string>
     <string name="pref_key_login">pref_login</string>
     <string name="pref_key_sel_file_mgr_app">pref_sel_file_mgr_app</string>
-    <string name="pref_key_set_default">pref_renew</string>
+    <string name="pref_key_set_default">pref_set_default</string>
+    <string name="pref_key_remove_invalid_links">pref_remove_invalid_links</string>
     <string name="pref_title_login">Login</string>
     <string name="playback_tag">PLAYBACK_TAG</string>
     <!-- dialog    -->
@@ -169,5 +170,6 @@
     <string name="button_ok">OK</string>
     <string name="delete_category_message">Do you want to delete this category?</string>
     <string name="delete_playlist_message">Do you want to delete this playlist?</string>
+    <string name="delete_item_message">Do you want to delete this item?</string>
 
 </resources>
